--- a/KoreFlex/appsettings.json
+++ b/KoreFlex/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "IdentityConnection": "Server=DESKTOP-H5U627E\\SQLEXPRESS;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=True",
-    "KoreFlexConnection": "Server=DESKTOP-H5U627E\\SQLEXPRESS;Database=KoreFlex;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "KoreFlexConnection": "Server=DESKTOP-H5U627E\\SQLEXPRESS;Database=KoreFlex;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "MoodyConnection": "Server=DESKTOP-H5U627E\\SQLEXPRESS;Database=Moody;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +11,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwtKeys": {
+    "JwtSecret": "apress_jwt_secret"
+  }
 }
